
Updating with simcore changes (rev. 2946 - Carl Beckmann).

- added a static parameter MAX_DEP_FACTOR to dependency object, to allow
the maximum input and output dependency objects to be changed from their
default value of 4 * MAX_CPU_INST.

----------
spartha1    Date: Sun Nov 15 19:01:52 EST 2009  CSN: CSN-asimcore-312
                  Mon Nov 16 00:01:52 UTC 2009


Directory config/pm
 null_uncore_model.apm     Locally Added               0 

Directory modules/system
 null_system.awb           Locally Added               0 
 null_system.cpp           Locally Added               0 
 null_system.h             Locally Added               0 

Directory feeders
 inst/                     Locally Added               0 

Directory feeders/inst
 interface/                Locally Added               0 

Directory feeders/inst/interface
 null/                     Locally Added               0 

Directory feeders/inst/interface/null
 instfeedernull.h          Locally Added               0 
 instfeedernull.awb        Locally Added               0 

Directory .
 feeders/                  Locally Added               0 

Updating with simcore changes (rev. 2966 - Carl Beckmann).

- Created a NULL uncore model, with a null system that provides the C++ API
expected by the Asim classic controller.
- fixed the null instruction feeder implementation so it provides the
calls expected by the Asim classic controller

----------
mcadler     Date: Tue Nov 24 08:12:03 EST 2009  CSN: CSN-asimcore-313
                  Tue Nov 24 13:12:03 UTC 2009


Directory lib/libasim/include/asim
 mesg.h                    Locally Modified          312 

WARN wasn't defined when assertions are disabled.

----------
mcadler     Date: Tue Nov 24 23:27:33 EST 2009  CSN: CSN-asimcore-314
                  Wed Nov 25 04:27:33 UTC 2009


Directory lib/libasim/include/asim
 atomic.h                  Locally Modified          313 

Add Pause instruction.